Changed header color

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="navbar-fixed">
     <nav>
-        <div class="nav-wrapper row blue">
+        <div class="nav-wrapper row green">
             <div class="col s12">
                 <a href="#" class="brand-logo center">EmojiAI</a>
             </div>
