Added drawing functionality

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 
 <div class="container content">
     <div class="row">
-        <div class="col s12 m6 canvas">
-            <h5 class="center-align">Draw an emoji</h5>
-            <div class="flex-center">
+        <div class="col s12">
+            <div class="canvas">
+                <h5 class="center-align">Draw an emoji</h5>
                 <canvas id="main" style="user-select: none"></canvas>
             </div>
         </div>
-        <div class="col s12 m6">
+        <div class="col s12">
             <h5 class="center-align">Predicted emoji</h5>
-            <div class="emoji flex-center">
+            <div class="emoji">
                 <i class="material-icons">grade</i>
             </div>
         </div>
