--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                 <i class="material-icons">grade</i>
             </div>
         </div>
+        <div class="col s12">
+            <a class="waves-effect waves-light btn" onclick="clearCanvas()">clear</a>
+            <a class="waves-effect waves-light btn" onclick="test()">test</a>
+            <a class="waves-effect waves-light btn" onclick="train()">train</a>
+        </div>
     </div>
 </div>
 
