Added neural network logic

--- a/index.html
+++ b/index.html
@@ -34,21 +34,17 @@
             </div>
         </div>
         <div class="col s12">
-            <h5 class="center-align">Predicted emoji</h5>
-            <div class="emoji">
-                <i class="material-icons">grade</i>
-            </div>
-        </div>
-        <div class="col s12">
             <a class="waves-effect waves-light btn" onclick="clearCanvas()">clear</a>
             <a class="waves-effect waves-light btn" onclick="test()">test</a>
-            <a class="waves-effect waves-light btn" onclick="train()">train</a>
+            <a class="waves-effect waves-light btn" onclick="train1()">train :)</a>
+            <a class="waves-effect waves-light btn" onclick="train2()">train :(</a>
         </div>
     </div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/numeric/1.2.6/numeric.min.js"></script>
 <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
