--- a/index.html
+++ b/index.html
@@ -30,14 +30,19 @@
         <div class="col s12">
             <div class="canvas">
                 <h5 class="center-align">Draw an emoji</h5>
-                <canvas id="main" style="user-select: none"></canvas>
+                <div class="flex-center">
+                    <canvas id="main" style="user-select: none"></canvas>
+                </div>
             </div>
         </div>
         <div class="col s12">
-            <a class="waves-effect waves-light btn" onclick="clearCanvas()">clear</a>
-            <a class="waves-effect waves-light btn" onclick="test()">test</a>
-            <a class="waves-effect waves-light btn" onclick="train1()">train :)</a>
-            <a class="waves-effect waves-light btn" onclick="train2()">train :(</a>
+            <div class="flex-center">
+                <a class="waves-effect waves-light btn" onclick="clearCanvas()">clear</a>
+                <a class="waves-effect waves-light btn" onclick="test()">test</a>
+                <a class="waves-effect waves-light btn" onclick="train1()">:)</a>
+                <a class="waves-effect waves-light btn" onclick="train2()">:(</a>
+                <a class="waves-effect waves-light btn" onclick="train()">train</a>
+            </div>
         </div>
     </div>
 </div>
